# rust-wasm-web-app

./: Cargo.toml  README.md
